--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
       <div class="table" id="diskholder">
         <div class="row header">
-          <div class="cell filesystem">Disk</div>
-          <div class="cell size">Size</div>
-          <div class="cell used">Used</div>
-          <div class="cell avail">Avail</div>
-          <div class="cell capacity">Use%</div>
+          <div class="cell filesystem">硬盘</div>
+          <div class="cell size">大小</div>
+          <div class="cell used">已使用</div>
+          <div class="cell avail">可用</div>
+          <div class="cell capacity">使用%</div>
         </div>
         <div class="clear"></div>
         <div id="disks"></div>
@@ -106,10 +106,10 @@
       <div id="fileholder" class="table">
         <div id="disk_show_note"></div>
         <div class="row header">
-          <div class="cell title">File</div>
-          <div class="cell size">Size</div>
-          <div class="cell del">del</div>
-          <div class="cell mv">mv</div>
+          <div class="cell title">文件</div>
+          <div class="cell size">大小</div>
+          <div class="cell del">删除</div>
+          <div class="cell mv">移动</div>
         </div>
         <div class="clear"></div>
         <div id="filerows"></div>
@@ -117,10 +117,10 @@
 
       <div id="networkholder" class="table"><!-- hidescanners -->
         <div class="row header">
-          <div class="cell name">Network</div>
-          <div class="cell listen">Listen</div>
-          <div class="cell scan ">Scan</div>
-          <div class="cell scanned">Scanned</div>
+          <div class="cell name">网络</div>
+          <div class="cell listen">监听</div>
+          <div class="cell scan ">扫描</div>
+          <div class="cell scanned">已扫描</div>
         </div>
         <div id="networkholdersub"></div>
         <div id="probes"></div>
@@ -129,8 +129,8 @@
 
     </div>
     <div id="devtools">
-      <div class="stoptick">stop</div>
-      <div class="starttick">start</div>
+      <div class="stoptick">停止</div>
+      <div class="starttick">开始</div>
       <div class="ticking">n</div>
       <div class=""></div>
     </div>
